image stretch correction

--- a/styles.css
+++ b/styles.css
@@ -146,8 +146,8 @@ body {
 }
 
 .playerbox img {
-    height: auto;
-    width: 113px;
+    height: 157px;
+    width: auto;
 }
 
 .playerbox h1{
